Fix contrast ratio #1

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -5,7 +5,7 @@ Thanks :)
 
 //** variables
 $background: #f5f6fa;
-$text: #9c9c9c;
+$text: #888888;
 $input-bg-color: #fff;
 $input-text-color: #a3a3a3;
 $button-bg-color: #7f8ff4;
